# Lab_8.1

./: CMakeLists.txt  robot.cpp  robot.h  scara.cpp  scara.h  scaraConsole.cpp  scaraConsole.h  scara_main.cpp
